# easyLambda

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Readme.md  _config.yml  contributing.md  index.html  index.md  params.json  tutorial.md
_data/: .navigation.yml.swp  navigation.yml
_docs/: .03-hello-world.md.swp  00-docs.md  01-welcome.md  02-quick-start-guide copy.md  02-quick-start-guide.md  03-hello-world.md  04-data-file.md  04-real-world.md  05-data-flows.md  05-out-of-the-world.md  06-starting-dataflow.md  07-dataflow-expr.md  07-dataflow.md  08-unit-expr.md  09-prll-options.md  10-rise-algo.md  11-map-filter-algo.md  12-reduce-algo.md  13-benchmarks.md  14-internals.md  1_dataflow.md
_pages/: posts.html
_posts/: 2016-10-02-easy-unary-predicates.md
data/datachallenge_cods2016/: train.csv
data/fromFileTests/: test2.txt
data/lammps/: dump.txt  dump6000.txt
data/logreg/: train.csv
data/readFileTests/: test1.txt
data/trajectory/: traj.txt
doc/: Doxyfile.in
doc/tutorial/: 1_dataflow.md  2_mapreduce.md  contents.md
examples/: 1D-diffusion.cpp  1D-diffusionBench.cpp  1D-diffusionSuccint.cpp  AddOffset.cpp  AddOffset.hpp  Readme.md  cods2016.cpp  demoColumns.cpp  demoFlow.cpp  demoFromFile.cpp  demoIO.cpp  demoMapFilter.cpp  demoPredicates.cpp  demoPrll.cpp  demoReadFile.cpp  demoReduce.cpp  demoReduceAll.cpp  demoRise.cpp  demoZip.cpp  displaced.cpp  interstitialcount.cpp  logreg.cpp  pi.cpp  trajectory.cpp  wordcount.cpp
include/: ezl.hpp
include/ezl/algorithms/: filters.hpp  fromFile.hpp  io.hpp  maps.hpp  partitioners.hpp  predicates.hpp  readFile.hpp  reduceAlls.hpp  reduces.hpp
include/ezl/builder/: DataFlowExpr.hpp  DumpExpr.hpp  FilterBuilder.hpp  FilterExpr.hpp  LoadBuilder.hpp  LoadExpr.hpp  LoadUnitBuilder.hpp  LoadUnitExpr.hpp  MapBuilder.hpp  MapExpr.hpp  ParExpr.hpp  PrllExpr.hpp  ReduceAllBuilder.hpp  ReduceAllExpr.hpp  ReduceBuilder.hpp  ReduceExpr.hpp  RiseBuilder.hpp  ZipBuilder.hpp
include/ezl/helper/: Karta.hpp  MpiWrapper.hpp  Par.hpp  ProcReq.hpp  vglob.hpp
include/ezl/mapreduce/: Dump.hpp  DumpFile.hpp  Load.hpp  (+7 more)
test/: FilterTest.cpp  FlowTest.cpp  MPIBridgeTest.cpp  MapTest.cpp  Readme.md  ReduceAllTest.cpp  ReduceTest.cpp  RiseTest.cpp  ZipTest.cpp  ctorTeller.hpp  fromFileTest.cpp  funcInvokeTest.cpp  slctTest.cpp  slctTupleTest.cpp  testmain.cpp  unitTest.cpp
test/unitTest/: FilterTest.cpp  FlowTest.cpp  LoadTest.cpp  MPIBridgeTest.cpp  MapTest.cpp  ReduceAllTest.cpp  ReduceTest.cpp  RiseTest.cpp  ZipTest.cpp  fromFileTest.cpp  funcInvokeTest.cpp  readFileTest.cpp  slctTest.cpp  slctTupleTest.cpp
(+17 files in other folders)
